2009-02-01  Tony Abou-Assaleh <taa@acm.org>

	* po/*.po: update from the Translation Project

	* po/Makefile.in.in: Remove deleted file ChangeLog from DISTFILES

2009-02-01  Karl Berry  <karl@tug.org>

	* missing: re-add (from gnulib), since it's missing.

	* src/grep.c (usage): consistent punctuation.

2009-01-31  Tony Abou-Assaleh <taa@acm.org>

	* m4/*.m4: quote underquoted definitions
	* m4/codeset.m4: serial AM1 -> serial 1
	* m4/iconv.m4: serial AM2 -> serial 2
	* m4/header.m4: m4_regexp -> m4_bregexp, m4_patsubst -> m4_bpatsubst

2009-01-29  Karl Berry  <karl@gnu.org>

	* src/grep.c (usage): mention gnu.org/s/grep and gnu.org/gethelp.

        Update and/or add copyright notices:
        * ABOUT-NLS
        * AUTHORS
        * ChangeLog
        * Makefile.am
        * NEWS
        * README
        * README-alpha
        * README.DOS
        * THANKS
        * autogen.sh
        * configure.ac.in
        * bootstrap/Makefile.am
        * bootstrap/Makefile.try
        * bootstrap/README
        * doc/Makefile.am
        * doc/grep.texi
        * lib/Makefile.am
        * m4/Makefile.am
        * po/POTFILES.in
        * src/Makefile.am
        * src/dfa.h
        * src/dosbuf.c
        * src/grep.h
        * src/kwset.c
        * src/kwset.h
        * src/mbsupport.h
        * src/search.c
        * src/system.h
        * src/vms_fab.c
        * src/vms_fab.h
        * tests/Makefile.am
        * tests/backref.sh
        * tests/bre.awk
        * tests/bre.sh
        * tests/empty.sh
        * tests/ere.awk
        * tests/ere.sh
        * tests/file.sh
        * tests/fmbtest.sh
        * tests/foad1.sh
        * tests/khadafy.sh
        * tests/options.sh
        * tests/pcre.sh
        * tests/spencer1.awk
        * tests/spencer1.sh
        * tests/spencer2.sh
        * tests/status.sh
        * tests/tests
        * tests/warning.sh
        * tests/yesno.sh
                * vms/Makefile.am
        * vms/config_vms.h
